:bug: remove autoslide on mobile contact card

--- a/css/index.css
+++ b/css/index.css
@@ -245,7 +245,7 @@ main {
 }
 
 /* Swiper JS customization */
-.swiper-container {
+.swiper-container, .swiper-container-auto {
     width: 100%;
     height: 100%;
     overflow: hidden;
